feature: add usage
